@@ -136,7 +136,7 @@
 		<dependency>
 		    <groupId>com.formdev</groupId>
 		    <artifactId>flatlaf</artifactId>
-		    <version>3.0</version>
+		    <version>3.5.1</version>
 		</dependency>        
     </dependencies>
 
