@@ -4,10 +4,15 @@ Data Crow version 5.0  BETA II                Released on 2024-xx-xx
 
 [Fixed]
 - An issue has been fixed where Data Crow is not correctly positioning itself on the main monitor.
+- The open library book search showed a file not found exception if a book cannot be found by its ISBN.
+- The service information was incorrectly stored for the open library online book search. This fix only works for newly added items (after this fix).
+- Password could not be reset from the client (client - server mode)
+- Linux: resizing dialog/forms from the right hand side scrambles the dialog
 
 [Updated]
 - Improved the preview for the find and replace.
 - Improved the find and replace regular expression support.
+- Added failed login message if credentials are incorrect.
 
 
 --------------------------------------------------------------------
